--- a/datacollection/user_app/backend/info_files/db_versions/v_3/Cheese Pimiento.yaml
+++ b/datacollection/user_app/backend/info_files/db_versions/v_3/Cheese Pimiento.yaml
@@ -299,24 +299,23 @@
   steps:
   - description: Add-Add 1/3 cup cheddar cheese to a microwave-safe cup
     errors:
-    - description: Spill
+    - description: Spill while adding
       tag: Technique Error
     modified_description: Add-Add 1/3 cup cheddar cheese to a microwave-safe cup but
       spill
   - description: Chop-Chop 1/4 red bell pepper into tiny bits
   - description: Place-Place the chopped pepper in the microwave-safe bowl
     errors:
-    - description: Spill
+    - description: Spill while placing pepper in bowl
       tag: Technique Error
     modified_description: Place-Place the chopped pepper in the microwave-safe bowl
       but spill
   - description: Add-Add 1 tablespoons of water to the bowl
-    modified_description: Add-Add 1 tablespoons of water to the bowl but spill
   - description: Melt-Melt the cheese by microwaving cup for 30 sec. (Check after
       30 seconds and microwave for 10 seconds more if needed).
   - description: Mix-Mix the cheese and red bell pepper in the bowl
     errors:
-    - description: Spill
+    - description: Spill while mixing
       tag: Technique Error
     modified_description: Mix-Mix the cheese and red bell pepper in the bowl but spill
   - description: add-add 1/2 tbsp softened butter to the bowl
@@ -353,10 +352,6 @@
   selected_by: 5
   steps:
   - description: Chop-Chop 1/4 red bell pepper into tiny bits
-    errors:
-    - description: 'NULL'
-      tag: Preparation Error
-    modified_description: Chop-Chop 1/4 red bell pepper into tiny bits
   - description: Add-Add 1/3 cup cheddar cheese to a microwave-safe cup
     errors:
     - description: Add-Add 1/2 cup cheddar cheese to a microwave-safe cup
@@ -381,7 +376,7 @@
   - description: Microwave-Microwave the bowl, covered, for 2 minutes
     errors:
     - description: Microwave-Microwave the bowl, covered, for 1 minutes
-      tag: Temperature Error
+      tag: Timing Error
     modified_description: Microwave-Microwave the bowl, covered, for 1 minutes
   - description: Mix-Mix the cheese and red bell pepper in the bowl
   - description: Add-Add 1/4 teaspoon pepper to the bowl
@@ -432,7 +427,7 @@
   - description: Add-Add 1/3 cup cheddar cheese to a microwave-safe cup
     errors:
     - description: spill some cheese while adding
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: Add-Add 1/3 cup cheddar cheese to a microwave-safe cup and
       spill some outside while adding
   - description: Add-Add 1 tablespoons of water to the bowl
@@ -442,7 +437,7 @@
   - description: Place-Place the chopped pepper in the microwave-safe bowl
     errors:
     - description: spill some bellpepper while adding
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: Place-Place the chopped pepper in the microwave-safe bowl
       and spill some bellpepper while transferring to bowl
   - description: Microwave-Microwave the bowl, covered, for 2 minutes
@@ -487,7 +482,7 @@
   - description: Chop-Chop 1/4 red bell pepper into tiny bits
     errors:
     - description: Slice instead of chopping
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: Slice - Slice 1/4 red bell pepper into tiny bits
   - description: Place-Place the chopped pepper in the microwave-safe bowl
     errors:
@@ -501,7 +496,7 @@
     errors:
     - description: Microwave for 10 seconds rather than 30 seconds
       tag: Timing Error
-    modified_description: 'Melt-Melt the cheese by microwaving cup for 10 sec. '
+    modified_description: Melt-Melt the cheese by microwaving cup for 10 sec.
   - description: Microwave-Microwave the bowl, covered, for 2 minutes
     errors:
     - description: Microwave for 30 seconds rather than 2 minutes
@@ -515,9 +510,6 @@
       tag: Measurement Error
     modified_description: add-add 1 tbsp softened butter to the bowl
   - description: Mix-Mix all the ingredients of the bowl well
-    errors:
-    - description: 'null'
-      tag: Temperature Error
 - activity_id: 27
   environment: 5
   errors:
@@ -555,7 +547,7 @@
   - description: Chop-Chop 1/4 red bell pepper into tiny bits
     errors:
     - description: Don't chop enough. (large pieces are hard to cook)
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: Chop-Chop 1/4 red bell pepper into large bits
   - description: Microwave-Microwave the bowl, covered, for 2 minutes
     errors:
@@ -579,9 +571,6 @@
   - description: Add-Add 1/4 teaspoon salt to the bowl
   - description: add-add 1/2 tbsp softened butter to the bowl
   - description: Mix-Mix all the ingredients of the bowl well
-    errors:
-    - description: NA
-      tag: Temperature Error
 - activity_id: 27
   environment: 2
   errors:
@@ -616,9 +605,6 @@
       tag: Measurement Error
     modified_description: Add-Add 1/2 cup cheddar cheese to a microwave-safe cup
   - description: Chop-Chop 1/4 red bell pepper into tiny bits
-    errors:
-    - description: 'NULL'
-      tag: Technique Error
     modified_description: Chop-Chop 1/4 red bell pepper into tiny bits
   - description: Place-Place the chopped pepper in the microwave-safe bowl
     errors:
@@ -633,10 +619,6 @@
     modified_description: Melt-Melt the cheese by microwaving cup for 30 sec on low
       heat.
   - description: Microwave-Microwave the bowl, covered, for 2 minutes
-    errors:
-    - description: 'NULL'
-      tag: Technique Error
-    modified_description: Microwave-Microwave the bowl, covered, for 2 minutes
   - description: Mix-Mix the cheese and red bell pepper in the bowl
     errors:
     - description: Mix-Mix the cheese and red bell pepper in the plate
@@ -649,14 +631,10 @@
     modified_description: Add-Add 1/2 teaspoon pepper to the bowl
   - description: Add-Add 1 tablespoons of water to the bowl
     errors:
-    - description: ' Add-Add 2 tablespoons of water to the bowl'
+    - description: Add-Add 2 tablespoons of water to the bowl
       tag: Measurement Error
-    modified_description: ' Add-Add 2 tablespoons of water to the bowl'
+    modified_description: Add-Add 2 tablespoons of water to the bowl
   - description: add-add 1/2 tbsp softened butter to the bowl
-    errors:
-    - description: 'NULL'
-      tag: Timing Error
-    modified_description: add-add 1/2 tbsp softened butter to the bowl
   - description: Add-Add 1/4 teaspoon salt to the bowl
     errors:
     - description: Add-Add 1/2 teaspoon salt to the bowl
@@ -666,7 +644,7 @@
     errors:
     - description: Mix-put all the ingredients of the bowl into the plate. Then mix
         all the ingredients in the plate.
-      tag: Technique Error
+      tag: Preparation Error
     modified_description: Mix-put all the ingredients of the bowl into the plate.
       Then mix all the ingredients in the plate.
 - activity_id: 27
@@ -700,7 +678,7 @@
   - description: Add-Add 1 tablespoons of water to the bowl
   - description: Add-Add 1/3 cup cheddar cheese to a microwave-safe cup
     errors:
-    - description: Spill
+    - description: Spill while adding
       tag: Technique Error
     modified_description: Add-Add 1/3 cup cheddar cheese to a microwave-safe cup but
       spill
@@ -709,7 +687,7 @@
   - description: Chop-Chop 1/4 red bell pepper into tiny bits
   - description: Place-Place the chopped pepper in the microwave-safe bowl
     errors:
-    - description: Spill
+    - description: Spill while placing chopped pepper in bowl
       tag: Technique Error
     modified_description: Place-Place the chopped pepper in the microwave-safe bowl;
       spill
